--- a/SistemaFacturacionSRI.BlazorApp/Components/Layout/NavMenu.razor
+++ b/SistemaFacturacionSRI.BlazorApp/Components/Layout/NavMenu.razor
@@ -34,6 +34,16 @@
             </Authorized>
         </AuthorizeView>
 
+        <AuthorizeView>
+            <Authorized>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="facturas">
+                <span class="bi bi-receipt-cutoff" aria-hidden="true"></span> Historial Facturas
+            </NavLink>
+        </div>
+            </Authorized>
+        </AuthorizeView>
+
         <AuthorizeView Roles="Administrador">
             <Authorized>
                 <div class="nav-item px-3">
